--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
   tests:
     uses: ./.github/workflows/tests.yml
 
-  build:
+  release:
     runs-on: ubuntu-latest
     needs: tests
     if: "!contains(github.event.head_commit.message, '__CI__')"
