Finalize vanilla Maven build with inlined dependencies
This resolves a number of longstanding issues with Lucee's OSGI implementation:

1. Poorly assembled bundles with no exported packages
2. Maven `artifactID.jar` files not matching the `artifactID-version.jar` filename Lucee expects
3. Bundles sharing a global namespace and colliding on subsequent installations

By inlining the dependencies, we avoid reliance on OSGI bundles and avoid the above headaches with Lucee's OSGI implementation.

This also fixes Hibernate's previously silenced logs, though I am not exactly sure why.

--- a/pom.xml
+++ b/pom.xml
@@ -115,19 +115,25 @@
             <extensions>true</extensions>
             <configuration>
                <instructions>
-                  <Embed-Dependency>*;scope=compile|runtime;inline=true</Embed-Dependency>
-                  <Embed-Transitive>true</Embed-Transitive>
-                  <Specification-Version>${project.version}</Specification-Version>
-                  <Implementation-Version>${project.version}</Implementation-Version>
                   <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                   <Bundle-Name>${project.artifactId}</Bundle-Name>
+
+                  <!--
+                     Embed all dependencies inline, EXCEPT:
+                     1. ehcache as it requires a certain package structure
+                     2. jtaextensions as it is an optional dependency
+                     https://felix.apache.org/documentation/subprojects/apache-felix-maven-bundle-plugin-bnd.html#_embedding_dependencies
+                  -->
+                  <Embed-Dependency>*;scope=compile|runtime;inline=true;artifactId=!jtaextensions</Embed-Dependency>
+                  <Embed-Transitive>true</Embed-Transitive>
+                  <!-- Empty imports, because most dependencies are inlined.-->
+                  <Import-Package>javax.transaction.*</Import-Package>
                   <Private-Package>ortus.extension.orm</Private-Package>
-                  <!-- <Export-Package>
-                        ortus.extension.orm,ortus.extension.orm.jdbc,ortus.extension.orm.util
-                     </Export-Package> -->
-                  <Import-Package>net.sf.ehcache.hibernate;,!lucee.*;,!org.osgi.framework;,*</Import-Package>
                   <Require-Bundle>org.lucee.xml.apis;bundle-version=1.4.1</Require-Bundle>
 
+                  <!-- Useful for retrieving version info from class.getBundle()-->
+                  <Specification-Version>${project.version}</Specification-Version>
+                  <Implementation-Version>${project.version}</Implementation-Version>
                   <!-- 
                         See:
                         https://liferay.dev/blogs/-/blogs/osgi-and-java-package-imports
