👌 IMPROVE: Add maven dependency download command for IDE source linking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,11 +14,8 @@
     "java.project.referencedLibraries": {
         "include" : [
             "extension/lib-lucee5/**/*.jar",
-            "extension/lib/**/*.jar"
-        ],
-        "sources" : {
-            "extension/lib/hibernate-5.4.29.jar" : "extension/lib-source/hibernate-5.4.29.jar"
-        }
+            "target/dependency/*.jar"
+        ]
     },
     "java.format.enabled": true,
     "java.format.settings.url": "extension/ortus-java-style.xml"
