👌 IMPROVE: Add build number to snapshot releases
This prevents subsequent 6.0 snapshots from overwriting (replacing) each other.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
           then
             echo "SNAPSHOT=true" >> $GITHUB_ENV
             echo "BRANCH=development" >> $GITHUB_ENV
-            echo "BUILD_VERSION=$PACKAGE_VERSION-snapshot" >> $GITHUB_ENV
+            echo "BUILD_VERSION=$PACKAGE_VERSION-snapshot+${{ github.run_number}}" >> $GITHUB_ENV
           fi
 
       - name: Update version in pom.xml
