--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,20 @@ lucee-core-version: ${minLuceeVersion}
          </exclusions>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+         <version>2.0.7</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+      <dependency>
+         <groupId>ch.qos.logback</groupId>
+         <artifactId>logback-classic</artifactId>
+         <version>1.4.8</version>
+      </dependency>
+
    </dependencies>
 
 
