📦 NEW: Bake OWASP CVE scan into github release notes after release is published

--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,10 @@ lucee-core-version: ${minLuceeVersion}
                   </goals>
                </execution>
             </executions>
+            <configuration>
+               <skipProvidedScope>true</skipProvidedScope>
+               <skipTestScope>true</skipTestScope>
+            </configuration>
          </plugin>
 
          <plugin>
