--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -18,38 +18,33 @@ jobs:
           export PACKAGE_VERSION=$( cat box.json | jq '.version' -r )
           echo "EXTENSION_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
 
-      # TODO: Re-enable when this bug is fixed: https://github.com/3liz/changelog-release/issues/8
-      # - name: Check for file
-      #   id: changelog_check
-      #   run: |
-      #     if grep -q "${{ env.EXTENSION_VERSION }}" CHANGELOG.md ]];then
-      #       echo "HAS_VERSION=true" >> $GITHUB_OUTPUT
-      #     else
-      #       echo "HAS_VERSION=false" >> $GITHUB_OUTPUT
-      #     fi
+      - name: Check changelog for this version
+        id: changelog_check
+        run: |
+          if grep -q "${{ env.EXTENSION_VERSION }}" CHANGELOG.md ]];then
+            echo "HAS_VERSION=true" >> $GITHUB_OUTPUT
+          else
+            echo "HAS_VERSION=false" >> $GITHUB_OUTPUT
+          fi
 
-      # - name: Update changelog [unreleased] with latest version
-      #   uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
-      #   if: env.SNAPSHOT == 'false' && steps.changelog_check.outputs.HAS_VERSION == 'false'
-      #   with:
-      #     changelogPath: ./CHANGELOG.md
-      #     tag: ${{ env.EXTENSION_VERSION }}
+      - name: Update changelog [unreleased] with latest version
+        uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
+        if: env.SNAPSHOT == 'false' && steps.changelog_check.outputs.HAS_VERSION == 'false'
+        with:
+          changelogPath: ./CHANGELOG.md
+          tag: ${{ env.EXTENSION_VERSION }}
 
-      # - name: Commit Changelog To Master
-      #   uses: EndBug/add-and-commit@v9.1.1
-      #   if: env.SNAPSHOT == 'false'
-      #   with:
-      #     author_name: Github Actions
-      #     author_email: info@ortussolutions.com
-      #     message: '📖 DOC: Finalized changelog for v${{ env.EXTENSION_VERSION }} - __CI__'
-      #     add: CHANGELOG.md
-      # - name: Read the changelog
-      #   id: changelog
-      #   uses: 3liz/changelog-release@0.2.0
-      #   with:
-      #     TAG_NAME: ${{ env.EXTENSION_VERSION }}
-      #     CHANGELOG_FILE: CHANGELOG.md
-      - uses: taiki-e/create-gh-release-action@v1.5.0
+      - name: Commit Changelog To Master
+        uses: EndBug/add-and-commit@v9.1.1
+        if: env.SNAPSHOT == 'false' && steps.changelog_check.outputs.HAS_VERSION == 'false'
+        with:
+          author_name: Github Actions
+          author_email: info@ortussolutions.com
+          message: '📖 DOC: Finalized changelog for v${{ env.EXTENSION_VERSION }} - __CI__'
+          add: CHANGELOG.md
+
+      - name: Push new release
+        uses: taiki-e/create-gh-release-action@v1.5.0
         with:
           changelog: CHANGELOG.md
         env:
