🤖 CI: Drop build number for non-snapshot releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,8 +47,8 @@ jobs:
         run: |
           export PACKAGE_VERSION=$( cat box.json | jq '.version' -r )
           echo "EXTENSION_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
-          echo "BRANCH=main" >> $GITHUB_ENV
-          echo "BUILD_VERSION=$PACKAGE_VERSION+${{ github.run_number}}" >> $GITHUB_ENV
+          echo "BRANCH=master" >> $GITHUB_ENV
+          echo "BUILD_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
           if [ $GITHUB_REF == 'refs/heads/development' ]
           then
             echo "SNAPSHOT=true" >> $GITHUB_ENV
