🔐 SECURITY: Suppress false positives flagging activation-api jars as Eclipse IDE CVEs
The Owasp dependency checker was incorrectly flagging both `angus-activation-2.0.1.jar` and `jakarta.activation-api-2.1.2.jar` as `eclipse:eclipse_ide`... which is obviously not the same.

--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,7 @@ lucee-core-version: ${minLuceeVersion}
             <configuration>
                <skipProvidedScope>true</skipProvidedScope>
                <skipTestScope>true</skipTestScope>
+               <suppressionFiles>${project.basedir}/extension/src/main/resources/security/owasp-suppression.xml</suppressionFiles>
             </configuration>
          </plugin>
 
