--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -5,6 +5,8 @@ on:
   push:
     tags:
       - v[0-9]+.*
+  workflow_dispatch:
+  # Reusable workflow : Optionally publish a github release from the UI.
 
 jobs:
   create-release:
