--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,8 +26,8 @@ jobs:
       fail-fast: false
       matrix:
         # We can run tests against any Lucee version, but we can only compile against Lucee releases available on mvnrepository.com.
-        lucee_version: ["5"]
-        java_version: [ "8" ] # , "11", "17" # Re-enable after test refactor is complete
+        lucee_version: [ "5" ]
+        java_version: [ "8", "11" ]
         experimental: [ false ]
         include:
           - lucee_version: "6-snapshot"
@@ -77,4 +77,4 @@ jobs:
       if: always()
       with:
         files: tests/results/**/*.xml
-        check_name: "${{ env.BRANCH }} Test Results"
+        check_name: "${{ env.BRANCH }} Test Results - ${{matrix.lucee_version}} on JRE ${{matrix.java_version}}"
