--- a/pom.xml
+++ b/pom.xml
@@ -293,16 +293,11 @@ lucee-core-version: ${minLuceeVersion}
             <type>pom</type>
             <scope>import</scope>
          </dependency>
-         <!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
+         <!-- https://mvnrepository.com/artifact/com.sun.istack/istack-commons-runtime -->
          <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <!--
-               Ensure jaxb-runtime (a transitive dependency from hibernate-core) uses the latest version,
-               (4.0.3), in order to avoid CVEs on the istack dependency,
-               which is itself a transitive dep on jaxb-runtime. 
-            -->
-            <version>4.0.3</version>
+            <groupId>com.sun.istack</groupId>
+            <artifactId>istack-commons-runtime</artifactId>
+            <version>4.1.0-M1</version>
          </dependency>
       </dependencies>
    </dependencyManagement>
