--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,12 +48,12 @@ jobs:
           export PACKAGE_VERSION=$( cat box.json | jq '.version' -r )
           echo "EXTENSION_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
           echo "BRANCH=master" >> $GITHUB_ENV
-          echo "BUILD_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
+          echo "BUILD_VERSION=$PACKAGE_VERSION.${{ github.run_number}}" >> $GITHUB_ENV
           if [ $GITHUB_REF == 'refs/heads/development' ]
           then
             echo "SNAPSHOT=true" >> $GITHUB_ENV
             echo "BRANCH=development" >> $GITHUB_ENV
-            echo "BUILD_VERSION=$PACKAGE_VERSION-snapshot+${{ github.run_number}}" >> $GITHUB_ENV
+            echo "BUILD_VERSION=$PACKAGE_VERSION.${{ github.run_number}}-snapshot" >> $GITHUB_ENV
           fi
 
       - name: Update version in pom.xml
