--- a/.github/workflows/gitbook-release.yml
+++ b/.github/workflows/gitbook-release.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'ortus-docs/orm-extension'
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
 
       - name: Append Changelog to Release History doc
         run: |
