--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -6,6 +6,7 @@ jobs:
   scan:
     name: Run Vulnerability Scan with Snyk
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '__CI__')"
     steps:
       - uses: actions/checkout@master
 
