🤖 CI: Use changelog as-is - __CI__

--- a/.github/workflows/gitbook-release.yml
+++ b/.github/workflows/gitbook-release.yml
@@ -14,20 +14,14 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Read version
-        id: current_version
         run: |
           export PACKAGE_VERSION=$( cat box.json | jq '.version' -r )
           echo "EXTENSION_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
           echo "RELEASE_DATE=$(date +%F)" >> $GITHUB_ENV
 
       - name: Read the changelog
-        id: changelog
-        uses: 3liz/changelog-release@0.2.0
-        with:
-          TAG_NAME: ${{ env.EXTENSION_VERSION }}
-          CHANGELOG_FILE: CHANGELOG.md
-          ADD_EMOJIS: false
-          ALLOW_FAILURE: false
+        run: |
+          echo "CHANGELOG=$(cat CHANGELOG.md)" >> $GITHUB_ENV
 
       - uses: actions/checkout@v3
         with:
@@ -39,11 +33,14 @@ jobs:
           # prepend our new release notes to new release history file
           echo "# Release History" > release-history-NEW.md
           echo "## ${{ env.EXTENSION_VERSION }} - ${{ env.RELEASE_DATE }}" > release-history-NEW.md
-          echo "${{ steps.changelog.outputs.markdown }}" >> release-history-NEW.md
-          # Delete first line (heading) from original release history notes
-          sed -i '1d' intro/release-history.md
+          echo "${{ env.CHANGELOG }}" >> release-history-NEW.md
+          
+          # Delete first 8 lines from original release history notes
+          sed -i '8d' intro/release-history.md
+          
           # copy current release history to temp file
           cat intro/release-history.md >> release-history-NEW.md
+          
           # put the final release history into docs
           rm intro/release-history.md
           cat release-history-NEW.md > intro/release-history.md
