--- a/.github/workflows/gitbook-release.yml
+++ b/.github/workflows/gitbook-release.yml
@@ -23,9 +23,9 @@ jobs:
         id: changelog
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          echo "CHANGELOG<<$EOF" >> "$GITHUB_ENV"
+          echo "CHANGELOG<<$EOF" >> "$GITHUB_OUTPUT"
           echo "$(cat CHANGELOG.md)" >> "$GITHUB_OUTPUT"
-          echo "$EOF" >> "$GITHUB_ENV"
+          echo "$EOF" >> "$GITHUB_OUTPUT"
 
       - uses: actions/checkout@v3
         with:
