📦 NEW: Add changelog auto updater
If we fire off a master/main release build, we should auto-update the changelog... BEFORE we publish to forgebox. This ensures that the forgebox version changelog is correct and matches the github version changelog.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,13 @@ jobs:
   tests:
     uses: ./.github/workflows/tests.yml
 
+  changelog:
+    if: "!contains(github.event.head_commit.message, '__CI__') && $GITHUB_REF != 'refs/heads/development'"
+    uses: ./.github/workflows/changelog.yml
+
   release:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: [ tests, changelog ]
     if: "!contains(github.event.head_commit.message, '__CI__')"
     steps:
       - uses: actions/checkout@v3
