--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,6 +6,7 @@ on: workflow_call
 
 jobs:
   changelog:
+    if: "!contains(github.event.head_commit.message, '__CI__') && ${{ github.ref != 'refs/heads/development' }}"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,7 +20,7 @@ jobs:
       - name: Check changelog for this version
         id: changelog_check
         run: |
-          if grep -q "${{ env.EXTENSION_VERSION }}" CHANGELOG.md ]];then
+          if grep -q "${{ env.EXTENSION_VERSION }}" CHANGELOG.md;then
             echo "HAS_VERSION=true" >> $GITHUB_OUTPUT
           else
             echo "HAS_VERSION=false" >> $GITHUB_OUTPUT
