--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,12 +1,18 @@
 
 # Rename [Unreleased] section in Changelog based on the current version in box.json
-name: Bump changelog unreleased
+name: Bump 'Unreleased' Changelog section
 
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      snapshot:
+          description: 'Is this a snapshot build?'
+          required: false
+          default: false
+          type: boolean
 
 jobs:
   changelog:
-    if: "!contains(github.event.head_commit.message, '__CI__') && github.ref_name != 'development'"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -28,14 +34,14 @@ jobs:
 
       - name: Update changelog [unreleased] with latest version
         uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
-        if: steps.changelog_check.outputs.HAS_VERSION == 'false'
+        if: steps.changelog_check.outputs.HAS_VERSION == 'false && inputs.SNAPSHOT == 'false'
         with:
           changelogPath: ./CHANGELOG.md
           tag: ${{ env.EXTENSION_VERSION }}
 
       - name: Commit Changelog To Master
         uses: EndBug/add-and-commit@v9.1.1
-        if: steps.changelog_check.outputs.HAS_VERSION == 'false'
+        if: steps.changelog_check.outputs.HAS_VERSION == 'false && inputs.SNAPSHOT == 'false'
         with:
           author_name: Github Actions
           author_email: info@ortussolutions.com
