--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,10 @@ jobs:
     uses: ./.github/workflows/tests.yml
 
   changelog:
+    if: "!contains(github.event.head_commit.message, '__CI__')"
     uses: ./.github/workflows/changelog.yml
+    with:
+      snapshot: ${{ env.SNAPSHOT }}
 
   release:
     runs-on: ubuntu-latest
