--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, '__CI__')"
     uses: ./.github/workflows/changelog.yml
     with:
-      snapshot: ${{ env.SNAPSHOT }}
+      snapshot: ${{ github.ref_name == 'development' }}
 
   release:
     runs-on: ubuntu-latest
