--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -34,14 +34,14 @@ jobs:
 
       - name: Update changelog [unreleased] with latest version
         uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
-        if: steps.changelog_check.outputs.HAS_VERSION == 'false && inputs.SNAPSHOT == 'false'
+        if: steps.changelog_check.outputs.HAS_VERSION == 'false' && inputs.SNAPSHOT == 'false'
         with:
           changelogPath: ./CHANGELOG.md
           tag: ${{ env.EXTENSION_VERSION }}
 
       - name: Commit Changelog To Master
         uses: EndBug/add-and-commit@v9.1.1
-        if: steps.changelog_check.outputs.HAS_VERSION == 'false && inputs.SNAPSHOT == 'false'
+        if: steps.changelog_check.outputs.HAS_VERSION == 'false' && inputs.SNAPSHOT == 'false'
         with:
           author_name: Github Actions
           author_email: info@ortussolutions.com
