🤖 CI: Reorganize CI workflows
Run Snyk security scan inside main "release" build... it makes little sense to run all snyk scans on every push.

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,6 +1,6 @@
 
 # Rename [Unreleased] section in Changelog based on the current version in box.json
-name: Bump 'Unreleased' Changelog section
+name: Changelog "Unreleased" Bumper
 
 on:
   workflow_call:
