🤖 CI: Pass snyk authentication token via workflow_call inputs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ env:
 jobs:
   security:
     uses: ./.github/workflows/security.yml
+    with:
+      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   tests:
     uses: ./.github/workflows/tests.yml
