--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   tests:
+    if: "!contains(github.event.head_commit.message, '__CI__')"
     uses: ./.github/workflows/tests.yml
 
   changelog:
