--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,16 +60,16 @@ jobs:
           fi
 
       - name: Set temporary (snapshot) version in pom.xml
-        if: env.SNAPSHOT
+        if: env.SNAPSHOT == 'true'
         run: sed -i -e "s/${{ env.EXTENSION_VERSION }}/${{ env.BUILD_VERSION }}/g" pom.xml
 
       - name: Generate Javadocs
-        if: !env.SNAPSHOT
+        if: env.SNAPSHOT == 'false'
         run: mvn --batch-mode -f pom.xml javadoc:javadoc
 
       - name: Upload API Docs to S3
         uses: jakejarvis/s3-sync-action@master
-        if: !env.SNAPSHOT
+        if: env.SNAPSHOT == 'false'
         with:
           args: --acl public-read
         env:
@@ -115,7 +115,7 @@ jobs:
 
       - name: Tag Version
         uses: rickstaa/action-create-tag@v1.6.1
-        if: !env.SNAPSHOT
+        if: env.SNAPSHOT == 'false'
         with:
           tag: "v${{ env.BUILD_VERSION }}"
           force_push_tag: true
