--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
     secrets: inherit
 
   tests:
-    if: "!contains(github.event.head_commit.message, '__CI__')"
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     uses: ./.github/workflows/tests.yml
 
   changelog:
-    if: "!contains(github.event.head_commit.message, '__CI__')"
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     uses: ./.github/workflows/changelog.yml
     with:
       snapshot: ${{ github.ref_name == 'development' }}
@@ -37,7 +37,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [ tests, changelog ]
-    if: "!contains(github.event.head_commit.message, '__CI__')"
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
       - uses: actions/checkout@v3
 
