--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Commit Format Changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: '👌 IMPROVE: Apply cfformat changes - __CI__'
+          commit_message: '👌 IMPROVE: Apply cfformat changes - [ci skip]'
