--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     uses: ./.github/workflows/changelog.yml
     with:
-      snapshot: ${{ env.SNAPSHOT }}
+      snapshot: $SNAPSHOT
 
   release:
     runs-on: ubuntu-latest
