🤖 CI: Switch back to inputs for changelog snapshot var

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
   changelog:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     uses: ./.github/workflows/changelog.yml
-    env:
+    with:
       snapshot: ${{ env.SNAPSHOT }}
 
   release:
