--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,8 @@
       <hibernate.version>5.6.15.Final</hibernate.version>
 
       <!-- What version of the JDK should we compile against? -->
-      <jdk.version>1.8</jdk.version>
-      <maven.compiler.target>${jdk.version}</maven.compiler.target>
-      <maven.compiler.source>${jdk.version}</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
+      <maven.compiler.source>11</maven.compiler.source>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
 
