--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,6 @@
 
       <!-- Dependency versions -->
       <minLuceeVersion>5.3.9.73</minLuceeVersion>
-      <lucee.version>5.4.0.80</lucee.version>
-      <hibernate.version>5.6.15.Final</hibernate.version>
 
       <!-- What version of the JDK should we compile against? -->
       <maven.compiler.target>11</maven.compiler.target>
@@ -70,7 +68,6 @@
          <organization>Lucee Association Switzerland</organization>
          <organizationUrl>http://lucee.org</organizationUrl>
          <roles>
-            <role>Project-Administrator</role>
             <role>Developer</role>
          </roles>
          <timezone>+1</timezone>
@@ -135,7 +132,7 @@
                   <Specification-Version>${project.version}</Specification-Version>
 
                   <!-- The Hibernate version, used in org.hibernate.Version  -->
-                  <Implementation-Version>${hibernate.version}</Implementation-Version>
+                  <Implementation-Version>5.6.15.Final</Implementation-Version>
                   <!-- 
                         See:
                         https://liferay.dev/blogs/-/blogs/osgi-and-java-package-imports
@@ -301,7 +298,7 @@ lucee-core-version: ${minLuceeVersion}
       <dependency>
          <groupId>org.lucee</groupId>
          <artifactId>lucee</artifactId>
-         <version>${lucee.version}</version>
+         <version>5.4.1.8</version>
          <!-- https://www.baeldung.com/maven-dependency-scopes#2-provided -->
          <scope>provided</scope>
       </dependency>
@@ -310,20 +307,20 @@ lucee-core-version: ${minLuceeVersion}
       <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-core</artifactId>
-         <version>${hibernate.version}</version>
+         <version>5.6.15.Final</version>
       </dependency>
       <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-jcache -->
       <!-- <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-jcache</artifactId>
-         <version>${hibernate.version}</version>
+         <version>5.6.15.Final</version>
       </dependency> -->
 
       <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-ehcache -->
       <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-ehcache</artifactId>
-         <version>${hibernate.version}</version>
+         <version>5.6.15.Final</version>
 
          <!--
          https://maven.apache.org/guides/introduction/introduction-to-optional-and-excludes-dependencies.html#how-to-use-dependency-exclusions -->
