👌 IMPROVE: Use but ignore extension/lib directories

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ target/
 *.DS_Store
 /cache
 
+# Dependencies
+extension/lib-source/*.jar
+extension/lib-test/*.jar
+
 # Test artifacts
 .engine
 WEB-INF/
