--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
     "java.project.referencedLibraries": {
         "include" : [
             "extension/lib-lucee5/**/*.jar",
+            "extension/lib-source/*.jar",
+            "extension/lib-test/*.jar",
             "target/dependency/*.jar"
         ]
     },
