--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
           echo "EXTENSION_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
           echo "BRANCH=master" >> $GITHUB_ENV
           echo "BUILD_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
-          if [ $SNAPSHOT ]
+          if [ $SNAPSHOT == 'true' ]
           then
             echo "BUILD_VERSION=$PACKAGE_VERSION.${{ github.run_number}}-snapshot" >> $GITHUB_ENV
           fi
